# rabbitmq-ext

./: .gitignore  Cargo.toml  Makefile.frag  README.md  composer.json  config.m4  phpunit.xml  stub.c
.claude/plans/: sharded-churning-bentley.md
.github/workflows/: release.yml  test.yml
src/: connection.rs  consumer.rs  error.rs  exceptions.rs  lib.rs  message.rs  protocol.rs  worker.rs
stubs/: Connection.php  ConnectionException.php  ConsumeException.php  Consumer.php  Exception.php  Message.php  MessageException.php  PublishException.php  rabbitmq.php
tests/: ConnectionTest.php  ConsumeEachTest.php  ConsumeTest.php  ExceptionTest.php  MessageTest.php  Pest.php  PublishTest.php
