[package]
name = "rabbitmq_ext"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "0.15"
lapin = "4"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
futures-lite = "2"
crossbeam-channel = "0.5"

[profile.release]
strip = "debuginfo"
